# pymadx

./: .buildinfo  .gitignore  Makefile  README.md  authorship.html  building.html  converting.html  diagrams.html  genindex.html  index.html  installation.html  licence.html  moduledocs.html  objects.inv  plotting.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tfsloading.html  version_history.html
.github/workflows/: deploy.yml  deploymanual.yml  deploytest.yml  test.yml
_static/: documentation_options.js
docs/source/: conf.py  diagrams.rst  installation.rst  licence.rst  tfsloading.rst  version_history.rst
pymadx/: Builder.py  Data.py  Plot.py  PtcAnalysis.py  __init__.py
pymadx/Compare/: _MadxMadxComparison.py  _MadxTransportComparison.py  __init__.py
pymadx/Convert/: __init__.py
src/pymadx/: Data.py  Diagrams.py  Plot.py  Ptc.py
src/pymadx/Compare/: _CompareCommon.py  _MadxMadxComparison.py  _MadxMadxComparisonRMatrix.py  __init__.py
tests/: test_data.py  test_diagrams.py  test_plot.py
tests/test_input/: generate-simple-tfs.madx  h6-simple.tfs
