[metadata]
name = pymadx
description = Package for loading MADX output.
long_description = file: README.md LICENCE.md
url = https://bitbucket.org/jairhul/pymadx
author = JAI@RHUL
maintainer = Laurie Nevay
author_email = laurie.nevay@cern.ch
license = GPL3
license_files = LICENCE.txt
classifiers =
    Development Status :: 5 - Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
package_dir=
    =src
packages=find:
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    matplotlib >= 1.7.1
    numpy >= 1.4
    pytransport
    importlib-metadata

[options.packages.find]
where=src
exclude=
    src/obsolete*